Show legacy device names in Audit log
[build image]